--- a/templates/default/s3.yml.erb
+++ b/templates/default/s3.yml.erb
@@ -1,4 +1,5 @@
-bucket: <%= @s3_bucket %>
-access_key_id: <%= @aki %>
-secret_access_key: <%= @sak %>
+bucket_name: <%= @bucket %>
+bucket: <%= @bucket %>
+access_key_id: <%= @access_key_id %>
+secret_access_key: <%= @secret_access_key %>
 
